--- a/DEPGodStyle.css
+++ b/DEPGodStyle.css
@@ -1,20 +1,43 @@
 .btn-main {
     background-color: white;
     color: #011f4b;
-    border: 2px solid #011f4b;
+    border: 1px solid #011f4b;
     transition-duration: 0.4s;
 }
 
 .btn-main:hover {
-    background-color: #337ab7;
+    background-color: #005b96;
     color: white;
 }
 
 .btn-main-voltar {
-    background-color: #005b96;
+    background-color: #337ab7;
     color: white;
-    border: 2px solid #011f4b;
+    border: 1px solid #011f4b;
     transition-duration: 0.4s;
+}
+
+.btn-main-voltar:hover {
+    background-color: #337ab7;
+    color: white;
+}
+
+.btn-nmain {
+    background-color: #337ab7;
+    color: white;
+    border: 1px solid #011f4b;
+    transition: 0.25s;
+}
+
+.btn-nmain:hover {
+    background-color: #337ab7;
+    color: white;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.btn-nmain:focus {
+    background-color: #337ab7;
+    color: white;
 }
 
 .navbar{
@@ -42,6 +65,53 @@
 .navbar .navbar-nav > .active > a:focus {
     color: #337ab7;
     background-color: white;
+}
+
+.form-control[disabled]{
+
+    cursor: auto;
+    color: #337ab7;
+    font-weight: bold; 
+    border-color: #337ab7;
+    background-color: #F9FFFF;
+}
+
+.has-success .form-control{
+    color: #337ab7;
+    border-color: #337ab7;
+}
+
+.has-success .form-control:focus{
+    border-color: #337ab7;
+    webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #337ab7;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #337ab7;
+}
+
+.has-success .input-group-addon {
+    color: #337ab7;
+    background-color: #C1E2F7;
+    border-color: #337ab7;
+}
+
+.has-error .help-block{
+    color: #FF6261;
+}
+
+.has-error .form-control{
+    color: #FF6261;
+    border-color: #FF6261;
+}
+
+.has-error .form-control:focus{
+    border-color: #FF6261;
+    webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #FF6261;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #FF6261;
+}
+
+.has-error .input-group-addon {
+    color: #FF6261;
+    background-color: #FFB7B4;
+    border-color: #FF6261;
 }
 
 .btn-group-justified{
