--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -6,17 +6,6 @@
     transition-duration: 0.4s;
 }
 
-.btn-main:hover {
-    background-color: #337ab7;
-    opacity: 1;
-    color: white;
-}
-
-.btn-main:focus{
-
-    color: white;
-}
-
 .btn-main-sub {
     background-color: rgba(235,252,255,0.5);
     opacity: 0.85;
@@ -25,28 +14,11 @@
     transition-duration: 0.4s;
 }
 
-.btn-main-sub:hover {
-    background-color: #7794AC;
-    opacity: 1;
-    color: white;
-}
-
 .btn-nmain {
     background-color: #337ab7;
     color: white;
     border: 1px solid #011f4b;
     transition: 0.25s;
-}
-
-.btn-nmain:hover {
-    background-color: #337ab7;
-    color: white;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.btn-nmain:focus {
-    background-color: #337ab7;
-    color: white;
 }
 
 .navbar{
@@ -110,6 +82,10 @@
     color: #257FDB;
 }
 
+.warning-message{
+    font-size: 12px;
+}
+
 .has-error .help-block{
     color: #FF6261;
 }
@@ -131,21 +107,11 @@
     border-color: #FF6261;
 }
 
-.btn-group-justified{
-    position:relative; 
-    top:30%; 
-    left:0%;    
-}
-
 .page-header{
     color: #005b96;
     font-family: "Franklin Gothic Medium";
     box-shadow: 0 4px 8px 0 rgba(0,91,150,0.15);
     transition: 0.2s;
-}
-
-.page-header:hover{
-    box-shadow: 0 8px 16px 0 rgba(0,91,150,0.15);
 }
 
 .jumbotron{
@@ -155,17 +121,9 @@
     transition: 0.3s;
 }
 
-.jumbotron:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
 .card{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-}
-
-.card:hover{
-   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2); 
 }
 
 .row{
