Refatoração Total - Parte 03

--- a/app/styles/position.css
+++ b/app/styles/position.css
@@ -1,10 +1,7 @@
-.warning-message{
-    margin-top: 35px;
-    margin-bottom: 0px;
+.btn-nmain {
+    margin-top: 10px
 }
 
-.btn-group-justified{
-    position:relative; 
-    top:30%; 
-    left:0%;    
+.msg{
+    margin-bottom: -22px;
 }
