--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -28,7 +28,7 @@
 }
 
 .navbar .navbar-brand{
-    font-family: "Franklin Gothic Medium";
+    font-family: 'Roboto', sans-serif;
     color: white;
 }
 
@@ -82,10 +82,6 @@
     color: #257FDB;
 }
 
-.warning-message{
-    font-size: 12px;
-}
-
 .has-error .help-block{
     color: #FF6261;
 }
@@ -109,16 +105,24 @@
 
 .page-header{
     color: #005b96;
-    font-family: "Franklin Gothic Medium";
+    font-family: 'Roboto', sans-serif;
     box-shadow: 0 4px 8px 0 rgba(0,91,150,0.15);
     transition: 0.2s;
 }
 
 .jumbotron{
     color: #005b96;
-    font-family: "Franklin Gothic Medium";
+    font-family: 'Roboto', sans-serif;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+}
+
+.msg{
+    font-size: 12px;
+}
+
+.modal-backdrop{
+    background-color: #E6EBE9
 }
 
 .card{
@@ -133,6 +137,19 @@
 .footer-main{
     background-color: #337ab7;
     border-color: white;
-    font-family: "Franklin Gothic Medium";
+    font-family: 'Roboto', sans-serif;
     color: #EBF2F7;
 }
+
+pre{
+    font-family: 'Roboto', sans-serif;
+    font-size: 26px;
+    text-align: center;
+    color: #257FDB;
+    border: none;
+    border-left-color: #337ab7;
+    border-left-style: solid;
+    border-left-width: 5px;
+    height: 60px;
+}
+
