Refatoração total - Parte 04

--- a/app/views/calculoicms_view.html
+++ b/app/views/calculoicms_view.html
@@ -20,35 +20,37 @@
                 </div>
                 <div class="modal-body">
                     <form name="icmsProprioForm">
-                        <div class="col-md-6 col-sm-6 col-xs-6">
-                            <div class="form-group" ng-class="{'has-error': !controlicms.validacaoBase(controlicms.valoresIcmsProprio.base), 'has-success':controlicms.validacaoBase(controlicms.valoresIcmsProprio.base)}">
+                        <div class="col-sm-6 col-xs-12">
+                            <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsProprio.validacaoBase(), 'has-success':controlicms.valoresIcmsProprio.validacaoBase()}">
                                 <label class="help-block" for="lbBaseCalculoProprio">Base Calculo</label>
                                 <input type="number" ng-model="controlicms.valoresIcmsProprio.base" name="baseIcmsProprio" class="form-control" required/>
-                                <span class="help-block msg" ng-show="!controlicms.validacaoBase(controlicms.valoresIcmsProprio.base)">Valor inválido!</span>
+                                <span class="help-block msg" ng-show="!controlicms.valoresIcmsProprio.validacaoBase()">Valor inválido!</span>
                             </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 col-xs-6">
-                            <div class="form-group" ng-class="{'has-error': !controlicms.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsProprio.aliquota), 'has-success':controlicms.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsProprio.aliquota)}">
+                        <div class="col-sm-6 col-xs-12">
+                            <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsProprio.validacaoAliquotaNaoAceitaZero(), 'has-success':controlicms.valoresIcmsProprio.validacaoAliquotaNaoAceitaZero()}">
                                 <label class="help-block" for="tbAliquotaIcmsProprio">Alíquota ICMS</label>
                                 <div class="input-group">
                                     <input type="number" ng-model="controlicms.valoresIcmsProprio.aliquota" class="form-control" name="aliquotaIcmsProprio" required/>
                                     <span class="input-group-addon" id="percent-addon">%</span>
                                 </div>
-                                <span class="help-block msg" ng-show="!controlicms.validacaoAliquotaNaoAceitaZero(controlicms.valoresIcmsProprio.aliquota)">Valor inválido!</span>
+                                <span class="help-block msg" ng-show="!controlicms.valoresIcmsProprio.validacaoAliquotaNaoAceitaZero()">Valor inválido!</span>
                             </div>
                         </div>
-                        <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-xs-12">
                             <div class="form-group">
-                                <button type="button" class="btn btn-nmain btn-block" ng-click="controlicms.resultadoIcmsProprio(controlicms.valoresIcmsProprio.base, controlicms.valoresIcmsProprio.aliquota)" ng-disabled="icmsProprioForm.$invalid">Calcular</button>
-                            </div>
-                            <p class="fa fa-question-circle-o pull-right" title="Discriminação Calculo:" data-toggle="popover" data-trigger="hover" data-placement="right"data-content="#discriminacao"></p>
+                                <button type="button" class="btn btn-nmain btn-block" data-trigger="#resultado"data-toggle="collapse" ng-click="controlicms.valoresIcmsProprio.calcular()" ng-disabled="!controlicms.valoresIcmsProprio.isValid()">Calcular</button>
+                            </div>   
+                            <a title="Discriminação" data-toggle="collapse" data-target="#discriminacao" class="fa fa-question-circle-o pull-right help-discriminacao"></a>
                             <label class="help-block" for="tbValorIcmsProprio">Valor ICMS</label>
-                            <pre>{{controlicms.valoresIcmsProprio.valor}}</pre>
+                            <pre ng-bind="controlicms.valoresIcmsProprio.valor | currency"></pre>
                         </div>
-                        <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-xs-12">
                             <div id="discriminacao" class="collapse">
                                 <div class="panel panel-primary">
-                                    <div class="panel-heading">Discriminação Calculo:</div>
+                                    <div class="panel-heading">Discriminação Calculo:
+                                        <button type="button" class="close" data-toggle="collapse" data-target="#discriminacao">&times;</button>
+                                    </div>
                                     <div class="panel-body">
                                     <center>
                                     (Base de calculo) * (Alíquota de ICMS)/100
@@ -61,7 +63,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0">
+                <div class="col-xs-12 col-xs-offset-0">
                     <div class="modal-footer">
                         <a type="button" class="btn btn-main-sub" ng-click="controlicms.limparProprio(controlicms.icmsProprioForm)">Limpar</a>
                         <a type="button" class="btn btn-main-sub" data-dismiss="modal">Fechar</a>
@@ -113,7 +115,7 @@
                                     </div>
                                     <div class="form-group row">
                                         <div class="col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
-                                            <button type="button" class="btn btn-nmain btn-block" ng-click="controlicms.resultadoIcmsRed(controlicms.valoresIcmsBaseRed.base, controlicms.valoresIcmsBaseRed.aliquota, controlicms.valoresIcmsBaseRed.aliquotaRed)" ng-disabled="icmsRedForm.$invalid">Calcular</button>
+                                            <button type="button" class="btn btn-nmain btn-block" ng-click="controlicms.valoresIcmsBaseRed.calcular()" ng-disabled="!controlicms.valoresIcmsBaseRed.isValid()">Calcular</button>
                                         </div>
                                     </div>
                                     <div class="form-group row">    
