--- a/app/styles/media_queries.css
+++ b/app/styles/media_queries.css
@@ -1,3 +1,11 @@
 @media screen and (min-width: 770px){
+    .close{
+        margin-top:0px;
+        font-size:21px;
+        font-weight: 700;
+    }
+}
+
+@media (min-width: 400) and (max-width: 768){
 
 }
