--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -153,3 +153,15 @@ pre{
     height: 60px;
 }
 
+.help-discriminacao{
+    cursor: pointer;
+}
+
+.close{
+    margin-top:-3px;
+    font-size:25px;
+    font-weight: 900;
+    color: white;
+    opacity: 0.5;
+}
+
